--- a/src/modules/Portafolio.module.css
+++ b/src/modules/Portafolio.module.css
@@ -130,6 +130,9 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 120px;
     }
 
 
