--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,10 @@ body{
   padding: 0px;
   margin: 0px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  background: #44A08D;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #093637, #44A08D);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #093637, #44A08D); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  /* background: #44A08D;  
+  background: -webkit-linear-gradient(to right, #093637, #44A08D); 
+  background: linear-gradient(to right, #093637, #44A08D); */
+  background: #284B63;
 
 }
 
