--- a/src/modules/LenguajesHerramientas.module.css
+++ b/src/modules/LenguajesHerramientas.module.css
@@ -3,7 +3,7 @@
     margin-bottom: 20px;
     text-align: center;
     font-size: 30px;
-    color: white;
+    color: #dddddd;
 }
 .contenedor{
     display: flex;
