--- a/src/modules/Portafolio.module.css
+++ b/src/modules/Portafolio.module.css
@@ -9,6 +9,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 .imagen{
     max-width: 280px;
