--- a/src/modules/Aptitudes.module.css
+++ b/src/modules/Aptitudes.module.css
@@ -17,7 +17,15 @@
     background-color: #EE964B;
     border-radius: 8px;
     font-weight: bold;
-    color: rgb(255, 255, 255);
+    color: #fdfdfd;
+    transform: scale(var(--escala, 1));
+    transition: transform 0.25s;
+
+}
+.item:hover{
+    --escala: 1.1;
+   box-shadow: 5px 5px 60px #f3ece5;
+   color: white;
 
 }
 
