--- a/src/modules/DatosPersonales.module.css
+++ b/src/modules/DatosPersonales.module.css
@@ -61,6 +61,13 @@
     border-radius: 8px;
     margin-bottom: 5px;
     text-align: center;
+    transform: scale(var(--escala, 1));
+    transition: transform 0.25s;
+}
+.espanol:hover, .ingles:hover{
+    --escala: 1.1;
+   box-shadow: 5px 5px 50px #f3ece5;
+   color: white;
 }
 .btnDescCV{
     background-color: #8F3985;
@@ -68,6 +75,13 @@
     padding: 7px;
     outline: none;
     border: 0px;
+    transform: scale(var(--escala, 1));
+    transition: transform 0.25s;
+}
+.btnDescCV:hover{
+    --escala: 1.1;
+   box-shadow: 5px 5px 40px #f3ece5;
+   color: white;
 }
 .btnDescCV a{
     text-decoration: none;
