--- a/src/modules/LenguajesHerramientas.module.css
+++ b/src/modules/LenguajesHerramientas.module.css
@@ -17,10 +17,17 @@
     background-color: #16a1b9;
     border-radius: 8px;
     font-weight: bold;
-    color: rgb(255, 255, 255);
+    color: #fdfdfd;
+    transform: scale(var(--escala, 1));
+    transition: transform 0.25s;
 
 }
-
+.item:hover{
+    --escala: 1.1;
+    box-shadow: 5px 5px 60px #f3ece5;
+    color: white;
+ 
+ }
 @media only screen and (max-width: 600px) {
     .contenedor{
         display: flex;
