--- a/src/modules/Portafolio.module.css
+++ b/src/modules/Portafolio.module.css
@@ -11,6 +11,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    padding-bottom: 40px;
 }
 .imagen{
     max-width: 280px;
@@ -37,6 +38,13 @@
     padding: 12px;
     border-radius: 8px;
     margin: 8px 10px 8px 14px;
+    transform: scale(var(--escala, 1));
+    transition: transform 0.10s;
+}
+.item:hover{
+    --escala: 1.1;
+   box-shadow: 5px 5px 40px #f3ece5;
+
 }
 .tecnologias{
     display: flex;
