--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body{
   /* background: #44A08D;  
   background: -webkit-linear-gradient(to right, #093637, #44A08D); 
   background: linear-gradient(to right, #093637, #44A08D); */
-  background: #284B63;
+  background: #dedede;
 
 }
 
