Se cambio el bacground de los datos personales y se hizo visible el texto de herramientas estaba en mismo color de fondo

--- a/src/modules/LenguajesHerramientas.module.css
+++ b/src/modules/LenguajesHerramientas.module.css
@@ -3,7 +3,7 @@
     margin-bottom: 20px;
     text-align: center;
     font-size: 30px;
-    color: #dddddd;
+    color: #111111;
 }
 .contenedor{
     display: flex;
