Se agrego animaciones a las imagenes

--- a/src/modules/DatosPersonales.module.css
+++ b/src/modules/DatosPersonales.module.css
@@ -62,8 +62,8 @@
 }
 .espanol, .ingles{
     padding: 5px;
-    background-color: #dd742d;
-    color: #ececec;
+    background-color: #EE964B;
+    color: #fff;
     max-width: 200px;
     border-radius: 8px;
     margin-bottom: 5px;
