--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+
+
+
 body{
   padding: 0px;
   margin: 0px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   /* background: #44A08D;  
   background: -webkit-linear-gradient(to right, #093637, #44A08D); 
   background: linear-gradient(to right, #093637, #44A08D); */
