--- a/src/modules/DatosPersonales.module.css
+++ b/src/modules/DatosPersonales.module.css
@@ -19,6 +19,9 @@
 .textos{
     max-width: 600px;
 }
+.textoDescriptivo {
+    font-size: 16px;
+}
 .tituloNombre{
     font-size: 30px;
     text-align: center;
@@ -119,6 +122,7 @@
     }
     .textoDescriptivo {
         padding-left: 15px;
+        font-size: 11px;
     }
     .tituloNombre{
         font-size: 26px;
@@ -193,7 +197,7 @@
 
     }
     .bienvenidos{
-        font-size: 17px;
+        font-size: 20px;
 
     }
     .carrera, .correo{
